--- a/client_code/CMS/form_template.yaml
+++ b/client_code/CMS/form_template.yaml
@@ -1,65 +1,65 @@
-is_package: true
-container:
-  type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html'}
 components:
-- type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true, wrap_on: never, col_spacing: tiny, spacing_above: none, col_widths: '{}', spacing_below: none, background: ''}
-  name: content_panel
-  layout_properties: {slot: default}
-  components:
-  - type: XYPanel
-    properties: {role: null, width: null, align: center, height: 20, tooltip: '', border: '', foreground: '', visible: true, spacing_above: small, spacing_below: medium, background: ''}
-    name: xy_panel_1
-    layout_properties: {grid_position: 'LQWXWB,FJNGZG'}
-    components:
-    - type: Label
-      properties: {role: null, align: center, tooltip: '', border: '', foreground: '', visible: true, text: Merchant Portal set up, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: none, italic: false, background: '', bold: true, underline: false, icon: ''}
+- components:
+  - components:
+    - layout_properties: {grid_position: 'HNIQTX,ZWSVKL', width: 742.672, x: 0, y: 2.1562000000000126}
       name: label_1
-      layout_properties: {grid_position: 'HNIQTX,ZWSVKL', x: 0, y: 2.1562000000000126, width: 742.672}
-    - type: Button
-      properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '', bold: false, underline: false, icon: 'fa:angle-left'}
+      properties: {align: center, background: '', bold: true, border: '', font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: small, spacing_below: none, text: Merchant Portal set up, tooltip: '', underline: false, visible: true}
+      type: Label
+    - event_bindings: {click: Dashboard_click}
+      layout_properties: {grid_position: 'HNIQTX,LXRVGT', width: 96, x: 0, y: 5}
       name: Dashboard
-      layout_properties: {grid_position: 'HNIQTX,LXRVGT', x: 0, y: 5, width: 96}
-      event_bindings: {click: Dashboard_click}
-  - type: GridPanel
-    properties: {spacing_above: none, spacing_below: none, background: '', foreground: '', border: '', visible: true, role: null, tooltip: ''}
-    name: grid_panel_1
-    layout_properties: {grid_position: 'BTMFSC,TLHRIM', full_width_row: true}
-    components:
-    - type: DataGrid
+      properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', icon: 'fa:angle-left', icon_align: left, italic: false, role: null, spacing_above: small, spacing_below: small, text: back, tooltip: '', underline: false, visible: true}
+      type: Button
+    layout_properties: {grid_position: 'LQWXWB,FJNGZG'}
+    name: xy_panel_1
+    properties: {align: center, background: '', border: '', foreground: '', height: 20, role: null, spacing_above: small, spacing_below: medium, tooltip: '', visible: true, width: null}
+    type: XYPanel
+  - components:
+    - components:
+      - layout_properties: {}
+        name: repeating_panel_1
+        properties: {item_template: CMS.RowTemplate4, spacing_above: none, spacing_below: none}
+        type: RepeatingPanel
+      - event_bindings: {click: dbUpdateButton_click}
+        layout_properties: {slot: footer}
+        name: button_1
+        properties: {align: left, background: '', bold: false, border: '', enabled: true, font: '', font_size: null, foreground: '', icon: '', icon_align: left, italic: false, role: null, spacing_above: small, spacing_below: small, text: DB_update, tooltip: '', underline: false, visible: true}
+        type: Button
+      layout_properties: {col_xs: 0, grid_position: 'UZACMG,ZBGFGT', row: DIWYFL, width: 674, width_xs: 12}
+      name: data_grid_1
       properties:
-        role: null
-        columns:
-        - {id: ECSLIN, title: Merchant name, data_key: name, $$hashKey: 'object:6799', width: '200', expand: false}
-        - {id: MBQKBP, title: Completion Codes, data_key: completion_code_enabled, $$hashKey: 'object:6871', width: 93, expand: false}
-        - {id: YZDWXM, title: Fail Codes, data_key: fail_code_enabled, $$hashKey: 'object:288', width: '90'}
-        - {id: VHZCVW, title: Low Rating, data_key: low_rating_enabled, $$hashKey: 'object:6873', width: 90, expand: false}
-        - {id: DNDWUT, title: Low Rating Threshold, data_key: rating_threshold, $$hashKey: 'object:6875', width: 97, expand: false}
         auto_header: true
-        tooltip: ''
+        background: ''
         border: ''
+        columns:
+        - {$$hashKey: 'object:6799', data_key: name, expand: false, id: ECSLIN, title: Merchant name, width: '200'}
+        - {$$hashKey: 'object:6871', data_key: completion_code_enabled, expand: false, id: MBQKBP, title: Completion Codes, width: 93}
+        - {$$hashKey: 'object:288', data_key: fail_code_enabled, id: YZDWXM, title: Fail Codes, width: '90'}
+        - {$$hashKey: 'object:6873', data_key: low_rating_enabled, expand: false, id: VHZCVW, title: Low Rating, width: 90}
+        - {$$hashKey: 'object:6875', data_key: rating_threshold, expand: false, id: DNDWUT, title: Low Rating Threshold, width: 97}
         foreground: ''
+        role: null
         rows_per_page: 20
-        visible: true
-        wrap_on: never
         show_page_controls: true
         spacing_above: none
         spacing_below: none
-        background: ''
-      name: data_grid_1
-      layout_properties: {grid_position: 'UZACMG,ZBGFGT', row: DIWYFL, width_xs: 12, col_xs: 0, width: 674}
-      components:
-      - type: RepeatingPanel
-        properties: {spacing_above: none, spacing_below: none, item_template: CMS.RowTemplate4}
-        name: repeating_panel_1
-        layout_properties: {}
-      - type: Button
-        properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '', visible: true, text: DB_update, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '', bold: false, underline: false, icon: ''}
-        name: button_1
-        layout_properties: {slot: footer}
-        event_bindings: {click: dbUpdateButton_click}
-- type: FlowPanel
-  properties: {}
+        tooltip: ''
+        visible: true
+        wrap_on: never
+      type: DataGrid
+    layout_properties: {full_width_row: true, grid_position: 'BTMFSC,TLHRIM'}
+    name: grid_panel_1
+    properties: {background: '', border: '', foreground: '', role: null, spacing_above: none, spacing_below: none, tooltip: '', visible: true}
+    type: GridPanel
+  layout_properties: {slot: default}
+  name: content_panel
+  properties: {background: '', border: '', col_spacing: tiny, col_widths: '{}', foreground: '', role: null, spacing_above: none, spacing_below: none, tooltip: '', visible: true, wrap_on: never}
+  type: ColumnPanel
+- layout_properties: {slot: nav-right}
   name: navbar_links
-  layout_properties: {slot: nav-right}
+  properties: {}
+  type: FlowPanel
+container:
+  properties: {html: '@theme:standard-page.html'}
+  type: HtmlTemplate
+is_package: true
