--- a/anvil.yaml
+++ b/anvil.yaml
@@ -290,7 +290,7 @@ db_schema:
     server: full
     title: webhook
 dependencies:
-- dep_id: dep_lygiyrqv0kc5ki
+- dep_id: dep_6optu0dwu9giun
   resolution_hints: {app_id: Z66T77M5F6NTSGC2, name: React DEV - TEST, package_name: React_DEV___TEST}
   version: {branch: master}
 metadata: {description: 'Radaro reduces your operational costs whilst offering real-time insights over your in-house and third-party service providers with unprecedented customer insights. Transform your last mile and service delivery, today.', logo_img: 'asset:RadaroLogo_CircleBlackLow-noBG-logo.png', title: REACT}
