--- a/anvil.yaml
+++ b/anvil.yaml
@@ -289,7 +289,10 @@ db_schema:
       type: string
     server: full
     title: webhook
-dependencies: []
+dependencies:
+- dep_id: dep_nhs94uinz7ezch
+  resolution_hints: {app_id: Z66T77M5F6NTSGC2, name: React DEV - TEST, package_name: React_DEV___TEST}
+  version: {branch: master}
 metadata: {description: 'Radaro reduces your operational costs whilst offering real-time insights over your in-house and third-party service providers with unprecedented customer insights. Transform your last mile and service delivery, today.', logo_img: 'asset:RadaroLogo_CircleBlackLow-noBG-logo.png', title: REACT}
 name: React DEV - TEST
 package_name: React_DEV_TEST
