--- a/anvil.yaml
+++ b/anvil.yaml
@@ -115,7 +115,7 @@ db_schema:
     - admin_ui: {width: 200}
       name: APIToken
       type: string
-    - admin_ui: {width: 200}
+    - admin_ui: {order: 5, width: 200}
       name: completion_code_enabled
       type: bool
     - admin_ui: {width: 200}
